fix homeupcoming header and remove horizontal scroll

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -13,7 +13,7 @@
   padding: 8px;
   font-size: 1rem;
   text-align: center;
-  width: 100%;
+  /* width: 100%; */
 }
 .homeImg:hover {
   cursor: pointer;
